Add functions htmlError() and htmlErrorFromException() + Add some css

--- a/public/styles/common.css
+++ b/public/styles/common.css
@@ -1,2 +1,2 @@
-
-/*# sourceMappingURL=data:application/json;charset=utf8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJjb21tb24uY3NzIiwic291cmNlc0NvbnRlbnQiOltdfQ== */
+.blk_Error{color:red;background-color:#faa}
+/*# sourceMappingURL=data:application/json;charset=utf8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbIi4uL2Jsb2Nrcy9FcnJvci5zY3NzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBLFdBQ0MsTUFBQSxJQUNBLGlCQUFBIiwiZmlsZSI6ImNvbW1vbi5jc3MiLCJzb3VyY2VzQ29udGVudCI6WyIuYmxrX0Vycm9yIHtcclxuXHRjb2xvciAgICAgICAgICAgIDogcmVkO1xyXG5cdGJhY2tncm91bmQtY29sb3IgOiAjZmFhO1xyXG59Il19 */
