--- a/src/scss/blocks/Error.scss
+++ b/src/scss/blocks/Error.scss
@@ -1,4 +1,7 @@
 .blk_Error {
 	color            : red;
-	background-color : #faa;
+	background-color : #fdd;
+	padding          : 1em;
+	border           : 1px solid red;
+	border-radius    : .3em;
 }
