--- a/src/scss/entries/common.scss
+++ b/src/scss/entries/common.scss
@@ -1,1 +1,6 @@
+@import '../base/all.scss';
+@import '../base/html.scss';
+@import '../base/body.scss';
 @import '../blocks/Error.scss';
+@import '../elements/Error_File.scss';
+@import '../elements/Error_Message.scss';
