--- a/src/scss/blocks/Error.scss
+++ b/src/scss/blocks/Error.scss
@@ -1,6 +1,7 @@
 .blk_Error {
 	color            : red;
 	background-color : #fdd;
+	margin           : .5em 0;
 	padding          : 1em;
 	border           : 1px solid red;
 	border-radius    : .3em;
