--- a/src/scss/base/html.scss
+++ b/src/scss/base/html.scss
@@ -1,4 +1,5 @@
 html {
 	font-family      : Roboto, Helvetica Neue, Helvetica, Calibri, Arial, Verdana, sans-serif;
+	margin-top       : 2em;
 	// background-color : grey; 
 }
